Add lti_context_id to selected offerings.

--- a/app/views/course_offerings/select_offering.html.haml
+++ b/app/views/course_offerings/select_offering.html.haml
@@ -1,12 +1,15 @@
 .container
   %h2 Please select a course offering
-  = form_tag '/path_TBD' do
+  = form_tag organization_select_course_offering_path do
+    = hidden_field_tag 'lti_context_id', params[:lti_context_id]
     - @course_offerings.each do |co|
       .form-group.col-xs-12
         .col-xs-1
-          = check_box_tag co.id, co.id, false, id: co.id
+          = check_box_tag 'course_offerings[]', co.id 
         = label_tag 'co.id', co.display_name_with_term, class: 'control-label col-xs-4'
     .form-group.col-xs-12
       .col-xs-1
         = check_box_tag 'new_course_offering', 'new_course_offering', false, id: 'new_course_offering'
       = label_tag :new_course_offering, 'Create a new course offering', class: 'control-label col-xs-4'
+    .form-group.col-xs-12
+      = submit_tag "Submit", class: 'btn btn-primary'
