--- a/app/views/course_offerings/select_offering.html.haml
+++ b/app/views/course_offerings/select_offering.html.haml
@@ -2,6 +2,9 @@
   %h2 Please select a course offering
   = form_tag organization_select_course_offering_path do
     = hidden_field_tag 'lti_context_id', params[:lti_context_id]
+    = hidden_field_tag 'workout_id', params[:workout_id]
+    = hidden_field_tag 'lms_assignment_id', params[:lms_assignment_id]
+    = hidden_field_tag 'workout_name', params[:workout_name]
     - @course_offerings.each do |co|
       .form-group.col-xs-12
         .col-xs-1
